# tonic-gcp-examples

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: stt.rs  text_to_speech.rs
src/: pubsub.rs  speech.rs  text_to_speech.rs
