[package]
name = "tonic-gcp-examples"
version = "0.1.0"
authors = ["cellfusion <makoto@cellfusion.jp>"]
edition = "2018"

[dependencies]
yup-oauth2 = "4.1.0"
tonic = { features = ["transport", "tls"], version = "0.2" }
tokio = { features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"], version = "0.2"}
prost = "0.6"
prost-types = "0.6"
cpal = { git = "https://github.com/RustAudio/cpal" }

[build-dependencies]
tonic-build = "0.2"

[[bin]]
name = "pubsub"
path = "src/pubsub.rs"
