[package]
name = "tonic-gcp-examples"
version = "0.1.0"
authors = ["cellfusion <makoto@cellfusion.jp>"]
edition = "2018"

[dependencies]
yup-oauth2 = "5.0.2"
tonic = { features = ["transport", "tls", "prost"], version = "0.4" }
tokio = { features = ["full"], version = "1.0"}
prost = "0.7"
prost-types = "0.7"
cpal = { git = "https://github.com/RustAudio/cpal" }
hound = "3.4.0"

[build-dependencies]
tonic-build = "0.4"

[[bin]]
name = "pubsub"
path = "src/pubsub.rs"

[[bin]]
name = "speech"
path = "src/speech.rs"
